--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-css-injected-by-js": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
@@ -34,9 +35,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "rollup-plugin-dts": "^6.1.1",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^3.9.1"
+    "vite": "^5.3.4"
   }
 }
