--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-easy-code-editor",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-rc.1",
   "license": "MIT",
   "author": {
     "name": "Daniel Crosby",
