--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:homepage": "tsc -b && vite build --config vite.config.homepage.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --config vite.config.homepage.ts"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -39,6 +40,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prismjs": "^1.29.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "vite-plugin-css-injected-by-js": "^3.5.1"
