--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-easy-code-editor",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "license": "MIT",
   "author": {
     "name": "Daniel Crosby",
@@ -52,6 +52,8 @@
   "keywords": [
     "react",
     "code",
-    "editor"
+    "editor",
+    "react-easy",
+    "code-editor"
   ]
 }
