--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-easy-code-editor",
-  "version": "1.0.0",
+  "description": "An easy to use react based code editor with syntax highlighting.",
+  "version": "1.1.0-rc.1",
   "license": "MIT",
   "author": {
     "name": "Daniel Crosby",
@@ -27,9 +28,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --config vite.config.homepage.ts"
   },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
@@ -44,7 +45,9 @@
     "prismjs": "^1.29.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
-    "vite-plugin-css-injected-by-js": "^3.5.1"
+    "vite-plugin-css-injected-by-js": "^3.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "repository": {
     "type": "git",
